GPII-675: Corrected a layout issue for long texts. Corrected a greek translation.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1304,8 +1304,7 @@ input[type="radio"] + label {
 }
 
 .gpii-speakText-punctuationVerbosity-row {
-    display: table-cell;
-    width: 25%;
+    display: inline-table;
     text-align: center;
     padding: 10px;
 }
